Fix speed limit alignment

--- a/src/app/displays/truck-display/truck-display.component.scss
+++ b/src/app/displays/truck-display/truck-display.component.scss
@@ -76,7 +76,7 @@ app-truck-display {
     width: 5vw;
     height: 5vw;
     text-align: center;
-    padding-top: 1.3vw;
+    padding-top: 1.1vw;
     position: relative;
     left: 50px;
     margin-top: 20px;
